# chungbuk-air-quality-monitor

./: .env.example  .gitignore  CLAUDE.md  README.md  README_PROJECT.md  pyproject.toml  requirements.txt
.claude/agents/: data-analyst.md  data-collector.md  devops.md  qa-reviewer.md  viz-engineer.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: collect.yml  cron_watchdog.yml  daily_dev_loop.yml  portfolio_ppt.yml
.streamlit/: config.toml
dashboard/: _lib.py  app.py
dashboard/pages/: 1_📊_수집_모니터링.py  2_🌬️_실시간_측정값.py  3_📐_공정능력_분석.py  4_🏭_단지_비교.py  5_📈_관리도.py  6_🔍_이상탐지.py  7_🌦️_풍향_기상분석.py
docs/: ANALYSIS_HYPOTHESES.md  CLAUDE_ROUTINE_PROMPT.md  CODE_REVIEW_CRITERIA.md  DEVELOPMENT_PROPOSAL.md  EXTERNAL_SCHEDULER_SETUP.md  GITHUB_ACTIONS_SETUP.md  INSIGHTS.md  INTERVIEW_QA.md  PHASE2_HANDOFF.md  PHASE_QUEUE.yml  PREFECT_SETUP.md  PRESENTATION_PROMPTS.md  PRESENTATION_SCRIPT.md  STREAMLIT_CLOUD_DEPLOY.md  WEATHER_SETUP.md  stations.md
flows/: alert_flow.py  collect_flow.py
reports/daily/: 2026-05-29.md  2026-05-30.md  (+56 more)
scripts/: analyze_capability.py  backfill.py  check_stations.py  collect_once.py  collect_weather.py  cron_watchdog.py  daily_dev_loop.py  generate_dmaic_report.py  generate_hypothesis_report.py  generate_portfolio_ppt.py  generate_wind_report.py
src/: config.py
tests/: test_analysis_capability.py  test_collectors.py  test_control_chart.py  test_dashboard_lib.py  test_discord.py  test_hypothesis_test.py  test_residual_chart.py  test_self_heal.py  test_storage.py  test_weather.py  test_western_electric.py  test_wind_regression.py
(+141 files in other folders)
