[project]
name = "chungbuk-air-quality-monitor"
version = "0.1.0"
description = "충북권 산업단지 대기질 실시간 모니터링 시스템 (SPC/Cp/Cpk)"
readme = "README_PROJECT.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32",
    "pandas>=2.2",
    "sqlmodel>=0.0.22",
    "python-dotenv>=1.1",
    "loguru>=0.7",
    "prefect>=3.7.2",
    "streamlit>=1.57.0",
    "plotly>=6.7.0",
    "scipy>=1.17.1",
    "python-docx>=1.2.0",
    "fpdf2>=2.8.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
workflow = [
    "prefect>=3.0",
]
dashboard = [
    "streamlit>=1.40",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
